Manage hostname with server playbook

--- a/provisioning/host_vars/testbed.addeo.net.yml
+++ b/provisioning/host_vars/testbed.addeo.net.yml
@@ -1,6 +1,7 @@
 ---
 # Server Configuration.
 server_hostname: testbed
+server_fqdn: testbed.addeo.net
 
 # Bootstrap Configuration.
 bootstrap_zpool_type: mirror
