--- a/ansible/server.yml
+++ b/ansible/server.yml
@@ -15,6 +15,7 @@
     - jnv.unattended-upgrades
     - role: ntd.nut
       when: 'physical_servers' in group_names
+    - mrlesmithjr.zfs
   tasks:
     - name: Ensure ZFS snapshots are taken before unattended upgrades are performed
       blockinfile:
