--- a/ansible/roles/zfs/tasks/main.yml
+++ b/ansible/roles/zfs/tasks/main.yml
@@ -14,8 +14,7 @@
 - import_tasks: manage_filesystems.yml
 
 # - import_tasks: manage_iscsi.yml
+#   when: zfs_filesystems | dict2items | json_query('[*].value.properties.shareiscsi') | difference([false, 'off']) | length > 0
 
 - import_tasks: manage_scrub_timers.yml
   when: zfs_pools | dict2items | json_query('[*].value.scrub') | length > 0
-
-# - import_tasks: manage_monitoring.yml
