--- a/ansible/server.yml
+++ b/ansible/server.yml
@@ -9,6 +9,11 @@
         suffix_to_merge: firewall_allowed_tcp_ports__to_merge
         merged_var_name: firewall_allowed_tcp_ports
         expected_type: list
+    - name: Merge firewall_allowed_udp_ports
+      merge_vars:
+        suffix_to_merge: firewall_allowed_udp_ports__to_merge
+        merged_var_name: firewall_allowed_udp_ports
+        expected_type: list
   roles:
     - os_hardening
     - ssh_hardening
