--- a/ansible/server.yml
+++ b/ansible/server.yml
@@ -22,6 +22,7 @@
       when: install_dell_omsa is defined and install_dell_omsa
     - role: plymouth
       when: install_plymouth is defined and install_plymouth
+      tags: plymouth
     - role: geerlingguy.firewall
       when: "'proxmox_servers' not in group_names"
     - geerlingguy.ntp
