zfs_filesystems -> zfs_datasets

--- a/ansible/host_vars/kilo.addeo.net.yml
+++ b/ansible/host_vars/kilo.addeo.net.yml
@@ -46,7 +46,7 @@ zfs_pools:
       utf8only: "on"
     state: present
 
-zfs_filesystems:
+zfs_datasets:
   # iSCSI datasets need to be outside of spool/data because it's encrypted.
   # Servers booting via iSCSI should encrypt root on their end.
   spool/iscsi:
