--- a/ansible/host_vars/kilo.addeo.net.yml
+++ b/ansible/host_vars/kilo.addeo.net.yml
@@ -11,14 +11,16 @@ bootstrap_zpool_disk_identifiers:
   - /dev/disk/by-id/scsi-3500a0751e5a9496e
 
 # Network Configuration
-ifupdown__host_interfaces:
+# @TODO implement templating for this shit
+network_interfaces:
   eno1:
-    allow: auto
+    auto: true
+    no_auto_down: true
     inet: static
-    address: 172.1.15.65/31
+    address: 172.16.115.65/31
     state: present
   eno3:
-    allow: auto
+    auto: true
     inet: static
     address: 10.1.15.65/24
     gateway: 10.1.15.1
