--- a/ansible/roles/zfs/tasks/manage_datasets.yml
+++ b/ansible/roles/zfs/tasks/manage_datasets.yml
@@ -4,4 +4,4 @@
     name: "{{ item.key }}"
     extra_zfs_properties: "{{ item.value.properties | default({}) | dict2items | rejectattr('key', 'in', zfs_custom_properties) | list | items2dict }}"
     state: "{{ item.value.state }}"
-  loop: "{{ zfs_filesystems | dict2items }}"
+  loop: "{{ zfs_datasets | dict2items }}"
